--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,13 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+			crossorigin="anonymous"
+		/>
+
 		<title>Google SignIn</title>
 		<style>
 			h1 {
@@ -13,56 +20,46 @@
 			}
 		</style>
 	</head>
-	<body>
-		<h1>Google SignIn</h1>
-		<hr />
+	<body class="container">
+		<div class="row">
+			<div class="col-sm-6">
+				<h2>Google SignIn</h2>
+				<hr />
 
-		<div
-			id="g_id_onload"
-			data-client_id="820882359177-iik1mq76m4mvk3puebkl7hra8uq8e824.apps.googleusercontent.com"
-			data-auto_prompt="false"
-			data-callback="handleCredentialResponse"
-		></div>
-		<div
-			class="g_id_signin"
-			data-type="standard"
-			data-size="large"
-			data-theme="outline"
-			data-text="sign_in_with"
-			data-shape="rectangular"
-			data-logo_alignment="left"
-		></div>
+				<div
+					id="g_id_onload"
+					data-client_id="820882359177-iik1mq76m4mvk3puebkl7hra8uq8e824.apps.googleusercontent.com"
+					data-auto_prompt="false"
+					data-callback="handleCredentialResponse"
+				></div>
+				<div
+					class="g_id_signin"
+					data-type="standard"
+					data-size="large"
+					data-theme="outline"
+					data-text="sign_in_with"
+					data-shape="rectangular"
+					data-logo_alignment="left"
+				></div>
 
-		<button id="google_signout">Signout</button>
+				<button class="btn btn-primary" id="google_signout">Signout</button>
+			</div>
+
+			<!-- Custom login -->
+			<div class="col-sm-6">
+				<h2>Socket SignIn</h2>
+				<hr />
+
+				<form class="d-grid">
+					<input type="email" name="email" class="form-control mb-2" placeholder="Email" />
+					<input type="password" name="password" class="form-control mb-2" placeholder="Password" />
+
+					<button type="submit" class="btn btn-primary">Login</button>
+				</form>
+			</div>
+		</div>
 
 		<script src="https://accounts.google.com/gsi/client" async defer></script>
-		<script>
-			function handleCredentialResponse(response) {
-				const body = { id_token: response.credential };
-
-				fetch(`http://localhost:8080/api/auth/google`, {
-					method: 'POST',
-					headers: {
-						'Content-Type': 'application/json',
-					},
-					body: JSON.stringify(body),
-				})
-					.then((resp) => resp.json())
-					.then((resp) => {
-						console.log(resp);
-						localStorage.setItem('email', resp.user.email);
-					})
-					.catch(console.warn);
-			}
-
-			const button = document.getElementById('google_signout');
-			button.onclick = () => {
-				google.accounts.id.disableAutoSelect();
-				google.accounts.id.revoke(localStorage.getItem('email' || ''), () => {
-					localStorage.clear();
-					location.reload();
-				});
-			};
-		</script>
+		<script src="./js/auth.js"></script>
 	</body>
 </html>
