--- a/public/chat.html
+++ b/public/chat.html
@@ -5,14 +5,52 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
-		<meta
-			name="viewport"
-			content="width=
-  , initial-scale=1.0"
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<link
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+			rel="stylesheet"
+			integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+			crossorigin="anonymous"
 		/>
 		<title>Chat</title>
 	</head>
 	<body class="container">
+		<div class="row mt-5">
+			<div class="col-sm-6">
+				<h3>Enviar mensaje</h3>
+				<hr />
+
+				<input
+					type="text"
+					id="txtUid"
+					class="form-control mb-2"
+					placeholder="uid"
+					autocomplete="off"
+				/>
+
+				<input
+					type="text"
+					id="txtMsg"
+					class="form-control mb-2"
+					placeholder="Mensaje"
+					autocomplete="off"
+				/>
+
+				<h3>Usuarios</h3>
+				<hr />
+				<ul id="ulUsers"></ul>
+			</div>
+
+			<div class="col-sm-6">
+				<h3>Chat completo</h3>
+				<hr />
+
+				<ul id="ulMensajes"></ul>
+			</div>
+		</div>
+
+		<button id="btnSalir" class="btn btn-outline-danger">Logout</button>
+
 		<script src="./socket.io/socket.io.js"></script>
 		<script src="./js/chat.js"></script>
 	</body>
